docs: ajustes na documentação
